--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices.adoc
@@ -44,9 +44,9 @@ The items in this guide are meant to be _brief_, _understandable_, and _actionab
 
 == Best Practices
 
-- <<bp_general.adoc#best_practices_general,General Gradle Best Practices>>
-- <<bp_dependencies.adoc#best_practices_for_dependencies,Best Practices for Dependencies>>
-- <<bp_tasks.adoc#best_practices_for_tasks,Best Practices for Tasks>>
+- <<best_practices_general.adoc#best_practices_general,General Best Practices>>
+- <<best_practices_dependencies.adoc#best_practices_for_dependencies,Best Practices for Dependencies>>
+- <<best_practices_tasks.adoc#best_practices_for_tasks,Best Practices for Tasks>>
 
 == Further Reference
 
