--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -610,8 +610,9 @@ This is possible, but imposes a significant performance penalty and reduces Buil
 If you need to create and apply a `Settings` plugin, you should create it in `buildSrc` for now.
 
 Another potential reason to use `buildSrc` is if you have a very large number of subprojects within your included `build-logic`.
-This may have performance implications, as Gradle maintains a separate classloader for each project.
-If these subprojects were moved to `buildSrc`, Gradle would only maintain a single classloader for the entire `buildSrc` project - this is more performant but possibly unintiutive, as it would restrict different versions of plugins from being applied in these different subprojects.
+Applying a different set of `build-logic` plugins to the subprojects in your _including_ build will result in a different classpath being used for each.
+This may have performance implications and make your build harder to understand.
+Using different plugin versions can cause features like <<build_services.adoc#build_services,Build Services>> to break in difficult to diagnose ways.
 
 Ideally, there would be no difference between using `buildSrc` and an included build, as `buildSrc` is intended to behave like an implicitly available included build.
 However, due to historical reasons, these subtle differences still exist.
