--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -175,3 +175,119 @@ include::sample[dir="snippets/bestPractices/avoidInternal/groovy",files="build.g
 === Tags
 
 <<tags_reference.adoc#tag:upgrades,`#upgrades`>>
+
+[[no_source_in_root]]
+== Do Not Put Source Files in the Root Project
+:keywords: structuring-builds
+
+Do not put source files in your root project, instead put them in an included (sub)project.
+
+=== Explanation
+
+The root project is a special project in Gradle that serves as the entry point for your build.
+
+It is a place to configure the build as a whole, such as declaring (but not applying) plugins to ensure the same version is available in every project in a build, and to do other types of configuration that apply to all the build's projects.
+
+It should not be used for source files, instead they should be located in a separate (sub)project.
+
+=== Example
+
+==== Don't Do This
+
+[.multi-language-sample]
+=====
+.A common way to structure new builds
+[source, kotlin]
+----
+├── app
+├── build.gradle.kts
+├── settings.gradle.kts
+└── src // This directory shouldn't exist
+    └── main
+        └── java
+            └── org
+                └── example
+                    └── MyClass1.java
+----
+=====
+[.multi-language-sample]
+=====
+.A common way to structure new builds
+[source, groovy]
+----
+├── app
+├── build.gradle
+├── settings.gradle
+└── src // This directory shouldn't exist
+    └── main
+        └── java
+            └── org
+                └── example
+                    └── MyClass1.java
+----
+=====
+
+====
+include::sample[dir="snippets/bestPractices/noSourceInRoot-avoid/kotlin",files="build.gradle.kts[tags=avoid-this]"]
+include::sample[dir="snippets/bestPractices/noSourceInRoot-avoid/groovy",files="build.gradle[tags=avoid-this]"]
+====
+
+<1> The `java-library` plugin is applied to the root project, as there are Java source files are in the root project.
+
+==== Do This Instead
+
+
+[.multi-language-sample]
+=====
+.A better way to structure new builds
+[source, kotlin]
+----
+├── core
+│    ├── build.gradle.kts
+│    └── src // Source lives in a "core" (sub)project
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        └── MyClass1.java
+└── settings.gradle.kts
+
+----
+=====
+[.multi-language-sample]
+=====
+.A better way to structure new builds
+[source, groovy]
+----
+├── core
+│    ├── build.gradle
+│    └── src // Source lives in a "core" (sub)project
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        └── MyClass1.java
+└── settings.gradle
+----
+=====
+
+====
+include::sample[dir="snippets/bestPractices/noSourceInRoot-do/kotlin",files="settings.gradle.kts[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/noSourceInRoot-do/groovy",files="settings.gradle[tags=do-this]"]
+====
+====
+include::sample[dir="snippets/bestPractices/noSourceInRoot-do/kotlin/core",files="build.gradle.kts[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/noSourceInRoot-do/groovy/core",files="build.gradle[tags=do-this]"]
+====
+
+<1> The root project exists only to configure the build, informing Gradle of a (sub)project named `core`.
+<2> The `java-library` plugin is only applied to the `core` project, which contains the Java source files.
+
+=== References
+
+- <<multi_project_builds.adoc#sec:multi_project_builds,Structuring Projects with Gradle>>
+- <<organizing_gradle_projects.adoc#sec:settings_file,Organizing Gradle Projects>>
+
+=== Tags
+
+`<<tags_reference.adoc#tag:structuring-builds,#structuring-builds>>`
