--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -174,6 +174,200 @@ include::sample[dir="snippets/bestPractices/avoidInternal/groovy",files="build.g
 
 <<tags_reference.adoc#tag:upgrades,`#upgrades`>>
 
+[[modularize_builds]]
+== Modularize Your Builds
+:keywords: structuring-builds
+
+Modularize your builds by creating subprojects.
+
+=== Explanation
+
+Splitting your build's source into multiple modules (Gradle projects) is key to taking advantage of Gradle's automatic work avoidance and parallelization features.
+After making a change to a source file, Gradle only needs to recompile affected projects.
+If all your source lives in a single project, Gradle can't skip any recompilations and won't be able to run tasks in parallel.
+You'll likely find other performance benefits of splitting source between projects due to minimizing the compilation classpath of each subproject to only the required dependencies, only running annotation processors on the source files that need them, and so on.
+
+It makes sense to split your build's source into multiple projects _early_.
+Don't wait until you hit some arbitrary number of source files or classes to do this, instead structure your build into multiple projects from the start using whatever natural boundaries exist in your codebase.
+This helps you plan for future growth as your build matures, and improves comprehensibility as each project can be described independently.
+
+Exactly how to split your source in a build varies.
+Common boundaries that make cohesive projects can include horizontal layers (e.g. API vs. implementation, front vs. back end, core business logic vs. UI), vertical slices (e.g. feature modules each containing UI + business logic), inputs to source generation vs. their consumers, or just closely related classes.
+In general, it matters less _how_ you split your source than that you _do_ split it according to some reasonable scheme.
+
+Expanding a build to hundreds of projects is common, and Gradle is designed to scale to this size and beyond.
+In the extreme, tiny projects containing only a class or two are probably counterproductive.
+However, you should typically err on the side of adding more projects rather than fewer.
+
+=== Example
+
+==== Don't Do This
+
+.A common way to structure new builds
+[.multi-language-sample]
+=====
+[source, kotlin]
+----
+├── app // This project contains a mix of classes
+│    ├── build.gradle.kts
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        └── CommonsUtil.java
+                         └── GuavaUtil.java
+│                        └── Main.java
+│                        └── Util.java
+├── settings.gradle.kts
+----
+=====
+[.multi-language-sample]
+=====
+[source, groovy]
+----
+├── app // This project contains a mix of classes
+│    ├── build.gradle
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        └── CommonsUtil.java
+                         └── GuavaUtil.java
+│                        └── Main.java
+│                        └── Util.java
+├── settings.gradle
+----
+=====
+
+====
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-avoid/kotlin",files="settings.gradle.kts[tags=avoid-this]"]
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-avoid/groovy",files="settings.gradle[tags=avoid-this]"]
+====
+====
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-avoid/kotlin/app",files="build.gradle.kts[tags=avoid-this]"]
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-avoid/groovy/app",files="build.gradle[tags=avoid-this]"]
+====
+
+<1> This build contains only a single project (in addition to the root project) that contains all the source code.  If there is any change to any source file, Gradle will have to recompile and rebuild everything.  While incremental compilation will help (especially in this simplified example) this is still less efficient then avoidance.  Gradle also won't be able to run any tasks in parallel, since all these tasks are in the same project, so this design won't scale nicely.
+<2> As there is only a single project in this build, the `application` plugin must be applied here.  This means that the `application` plugin will be affect all source files in the build, even those which have no need for it.
+<3> Likewise, the dependencies here are only needed by each particular implmentation of util.  There's no need for the implementation using Guava to have access to the Commons library, but it does because they are all in the same project.  This also means that the classpath for each subproject is much larger than it needs to be, which can lead to longer build times and other confusion.
+
+==== Do This Instead
+
+.A better way to structure this build
+[.multi-language-sample]
+=====
+[source, kotlin]
+----
+├── app
+│    ├── build.gradle.kts
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        └── Main.java
+├── settings.gradle.kts
+├── util
+│    ├── build.gradle.kts
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        └── Util.java
+├── util-commons
+│    ├── build.gradle.kts
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        └── CommonsUtil.java
+└── util-guava
+    ├── build.gradle.kts
+    └── src
+        └── main
+            └── java
+                └── org
+                    └── example
+                        └── GuavaUtil.java
+----
+=====
+[.multi-language-sample]
+=====
+[source, groovy]
+----
+├── app // App contains only the core application logic
+│    ├── build.gradle
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        └── Main.java
+├── settings.gradle
+├── util // Util contains only the core utility logic
+│    ├── build.gradle
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        └── Util.java
+├── util-commons // One particular implementation of util, using Apache Commons
+│    ├── build.gradle
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        └── CommonsUtil.java
+└── util-guava // Another implementation of util, using Guava
+    ├── build.gradle
+    └── src
+        └── main
+            └── java
+                └── org
+                    └── example
+                        └── GuavaUtil.java
+----
+=====
+
+====
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-do/kotlin",files="settings.gradle.kts[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-do/groovy",files="settings.gradle[tags=do-this]"]
+====
+====
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-do/kotlin/app",files="build.gradle.kts[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-do/groovy/app",files="build.gradle[tags=do-this]"]
+====
+====
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-do/kotlin/util-commons",files="build.gradle.kts[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-do/groovy/util-commons",files="build.gradle[tags=do-this]"]
+====
+====
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-do/kotlin/util-guava",files="build.gradle.kts[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/modularizeYourBuild-do/groovy/util-guava",files="build.gradle[tags=do-this]"]
+====
+
+<1> This build logically splits the source into multiple projects.  Each project can be built independently, and Gradle can run tasks in parallel.  This means that if you change a single source file in one of the projects, Gradle will only need to recompile and rebuild that project, not the entire build.
+<2> The `application` plugin is only applied to the `app` project, which is the only project that needs it.
+<3> Each project only adds the dependencies it needs.  This means that the classpath for each subproject is much smaller, which can lead to faster build times and less confusion.
+<4> Each project only adds the specific plugins it needs.
+<5> Each project only adds the dependencies it needs.  Projects can effectively use <<java_library_plugin.adoc#sec:java_library_separation,API vs. Implementation separation>>.
+
+=== References
+
+- <<multi_project_builds.adoc#multi_project_builds,Structuring Projects with Gradle>>
+- <<organizing_gradle_projects.adoc#sec:settings_file,Organizing Gradle Projects>>
+
+=== Tags
+
+`<<tags_reference.adoc#tag:structuring-builds,#structuring-builds>>`
+
 [[no_source_in_root]]
 == Do Not Put Source Files in the Root Project
 :keywords: structuring-builds
